# filter-template

./: CMakeLists.txt  README.md
tests/: boats-gradient-hedge.pgm  boats-gradient-magedge.pgm  boats-gradient-vedge.pgm  test_filter.cpp
